--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     </div>
                     <div class="works">
                         <img src="img/sec_1/work_1.png" alt="">
-                        <img src="img/sec_1/work_2.png" alt="">
+                        <img src="img/sec_1/work_2.png" width="150px" alt="">
                         <img src="img/sec_1/work_4.png" alt="">
-                        <img src="img/sec_1/work_3.png" alt="">
+                        <img src="img/sec_1/work_3.png" width="150px" alt="">
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -121,6 +121,51 @@
                             <div class="views">
                                 <img class="mr-1" src="img/icons/human.svg">
                                 451
+                            </div>
+                            <a class="link btn btn-blue" href="#">Подробнее</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card with-date">
+                <img alt="" class="abs_pic stone" src="img/abs_pic/stone_orange.svg">
+                <div class="media align-items-center">
+                    <img class="mr-md-3 media-image d-md-block d-none" src="img/sec_my_projects/salesDep.jpg" width="180px" alt="Generic placeholder image">
+                    <div class="media-body">
+                        <div class="date_wrap">
+                            <div class="item">
+                                <span>Старт</span>
+                                <div class="date">
+                                    <span>ноября</span>
+                                    <div>19</div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <span>Финиш</span>
+                                <div class="date">
+                                    <span>декабря</span>
+                                    <div>13</div>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="card_subtitle">Онлайн</p>
+                        <h4 class="card_title">Профессия менеджер по продажам</h4>
+                        <div class="b-card-body">
+                            <ul class="list">
+                                <li>эффективно продавать в заранее запланированных ситуациях;</li>
+                                <li>импровизировать в продажах, когда ситуация нестандартная;</li>
+                                <li>вести клиента по своему плану;</li>
+                                <li>определять тип покупателя и адаптировать свой подход к нему;</li>
+                                <li>создавать свой идеальный скрипт продаж и тестировать его на практике;</li>
+                                <li>строить план развития своей карьеры, чтобы через 6-12 месяцев стать руководителем в продажах</li>
+                            </ul>
+                        </div>
+                        <div class="dropdown-divider"></div>
+                        <div class="b-card-footer">
+                            <div class="counter">8 уроков, 24 часов</div>
+                            <div class="views">
+                                <img class="mr-1" src="img/icons/human.svg">
+                                386
                             </div>
                             <a class="link btn btn-blue" href="#">Подробнее</a>
                         </div>
