--- a/index.html
+++ b/index.html
@@ -57,27 +57,24 @@
             <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
             <div class="row">
                 <div class="col-md-8">
-                    <h1>Константин Лашкевич</h1>
-                    <p class="undertitle">Инвестор IT, ed-tech, LMS <br> Реальный практик корпоративного управления <i>идеолог Позитивного Менеджмента</i></p>
+                    <h1>Алексей Геращенко</h1>
+                    <p class="undertitle">Преподаватель финансов Киево-Могилянской<br> бизнес-школы, консультант, топ-менеджер,<br> предприниматель</i></p>
                     <div class="card">
                         <ul>
-                            <li><img src="img/sec_1/ok.svg" alt="ok"><span><b>№1</b> в России по трансформации корпоративной культуры для Х-кратного роста</span></li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">20 лет в бизнесе с акционерами топ Forbes</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">11 лет управления холдингами</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">5 лет на позиции Президента холдинга RFP Group</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Возглавлял холдинги “ННК” и “Вторчермет НЛМК” и вывел в лидеры рынка</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Инвестор в проекте Smart Expert</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Один из лучших финансовых директоров Украины в профессиональных рейтингах</span></li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Автор многочисленных статей по практике управления финансами</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Автор популярного учебника "Экономика XXI" и художественного романа «Лише секунда»</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Преподаватель авторских финансовых курсов в Киево-Могилянской бизнес-школе, бизнес-тренер и консультант</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Популяризатор экономических знаний и экономической культуры</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Автор 3 курсов на платформе Prometheus, на которые суммарно зарегистрировались более 80 000 человек.</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Проводил обучение специалистов для таких крупных украинских и международных компаний как SoftServe, Global Logic, Milkiland, Группа компаний Фокстрот, Efes и многих других</li>
                         </ul>
                     </div>
-                    <div class="works">
-                        <img src="img/sec_1/work_1.png" alt="">
-                        <img src="img/sec_1/work_2.png" alt="">
-                        <img src="img/sec_1/work_3.png" alt="">
-                    </div>
+
                 </div>
                 <div class="col-md-4">
                     <div class="img_wrapp">
-                        <img src="img/sec_1/konstantin.png" alt="SE">
+                        <img src="img/sec_1/gerasshenko.png" alt="SE">
                     </div>
                 </div>
             </div>
@@ -94,7 +91,7 @@
                 <div class="col-lg-5 d-flex justify-content-center">
                     <div class="card_transparent">
                         <div class="icon_avatar" style="background-image: url('img/sec_bio/konstantin.jpg')"></div>
-                        <h5>Константин Лашкевич</h5>
+                        <h5>Алексей Геращенко</h5>
                         <div class="soc_links_wrapp">
                             <a href="#" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
                             <a href="#" class="item"><img src="img/soc_links/vk.svg" alt="vk"></a>
@@ -108,13 +105,10 @@
                 <div class="col-lg-7">
                     <div class="card">
                         <img src="img/sec_bio/quote.svg" alt="quote" class="quote">
-                        <p>Привет! <br> Меня зовут Константин Лашкевич. Уже более 20 лет я в бизнесе с акционерами Forbes, 11 лет управлял холдингами и выводил их в лидеры отрасли. Мой путь начался в университете, когда я создал несколько бизнесов,
-                            чтобы оплатить свое обучение по специальности “Менеджмент”. </p>
-                        <p>Спустя долгие годы собственного бизнеса и управления холдингами - я собрал резульаттивные практики, методы, инструменты и стратегии в методологию “Позитивного Менеджмента”. <br> Я обучаю этому ТОП-менеджеров крупных
-                            компаний и собственников, помогая им создавать эффективные команды и выводить холдинги в лидеры отрасли. </p>
-                        <p>Я верю в то, что мотивация людей через обучение и стремление к высоким целям создает прорывы в личных и корпоративных результатах. Моя идеология подтверждена практикой и сейчас я рад передать свои знания и навыки через
-                            <span class="font-weight-bold">Акселерацию Людей и Бизнесов.</span></p>
-                        <p class="font-weight-bold"><i>“Позитивный менеджмент - это новые прорывы, достижения и успех!”</i> </p>
+                        <p>Я финансист, а также предприниматель, гражданский активист, преподаватель финансов, консультант и писатель. </p>
+                        <p>Долгое время я работал в качестве финансового директора крупных украинских компаний, а в последние годы занимаюсь параллельно несколькими направлениями: преподаю финансы в Киево-Могилянской бизнес-школе, работаю как консультант, участвую в общественных проектах в сфере развития экономической грамотности и реформирования экономики Украины. </p>
+                        <p>Люди зачастую говорят на разных языках, видят работу бизнеса под разным углом. Менеджеры компании часто «не со зла» делают то, что компании финансово невыгодно. Я обучаю менеджеров компании финансовым знаниям, объясняю значение и роль тех или иных показателей, открываю финансовую точку зрения.</p>
+                        <p>Думаю, у меня получается объяснять очень сложные вещи довольно простыми словами. Хотя, если разобраться, то сложного вообще нет. Любую сложную модель можно разделить на несколько более простых, те - на ещё более простые формы, и так, в конце концов, добраться до простоты.</p>
                     </div>
                 </div>
             </div>
@@ -133,8 +127,8 @@
                     </div>
                 </div>
                 <div class="col-xl-7 col-md-6 right-col main-txt">
-                    <h2>Хочешь я стану твоим наставником в карьере и бизнесе для Х-кратного роста? </h2>
-                    <p>С теми кто жаждет результатов, я готов делиться практиками, инструментами и стратегиями позитивного менеджмента.</p>
+                    <h2>Хотите решать финансовые задачи, опираясь на четкие знание и опыт?</h2>
+                    <p>Мой курс повысит вашу стоимость как профессионала и стоимость вашей компании благодаря грамотному управлению финансами.</p>
                     <a href="#" class="btn btn-blue">
                         ДА, ХОЧУ
                     </a>
@@ -161,41 +155,36 @@
                             <div class="item">
                                 <span>Старт</span>
                                 <div class="date">
-                                    <span>июн</span>
-                                    <div>1</div>
+                                    <span>ноябрь</span>
+                                    <div>19</div>
                                 </div>
                             </div>
                             <div class="item">
                                 <span>Финиш</span>
                                 <div class="date">
-                                    <span>июн</span>
-                                    <div>19</div>
+                                    <span>декабря</span>
+                                    <div>17</div>
                                 </div>
                             </div>
                         </div>
-                        <p class="card_subtitle">Онлайн марафон</p>
-                        <h4 class="card_title">Акселератор Карьерного Роста</h4>
+                        <p class="card_subtitle">Онлайн-курс</p>
+                        <h4 class="card_title">Финансовый директор</h4>
                         <div class="b-card-body">
-                            <ul class="list">
-                                <li>Соверши настоящий прорыв в карьере за 12 месяцев</li>
-                                <li>Прокачай менеджмент и создай личную стратегию кратного роста на 5 лет</li>
-                                <li>Обрети новые связи для карьерных и бизнес целей</li>
-                                <li>Измени себя и свою команду, подними стандарты жизни</li>
-                            </ul>
+                            <p>Курс для собственников бизнеса, руководителей компаний, бухгалтеров и руководителей отделов</p>
                         </div>
                         <div class="dropdown-divider"></div>
                         <div class="b-card-footer">
-                            <div class="counter">12 этапов, 60 уроков</div>
+
                             <div class="views">
                                 <img class="mr-1" src="img/icons/human.svg">
-                                1011
+                                8000
                             </div>
-                            <a class="link btn btn-blue" href="#">Подробнее</a>
+                            <a class="link btn btn-blue ml-auto" href="#">Подробнее</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="card margin-b-80">
+        <!--    <div class="card margin-b-80">
                 <div class="media align-items-center">
                     <img class="mr-md-3 media-image" src="img/sec_my_projects/card_img2.jpg" alt="Generic placeholder image">
                     <div class="media-body">
@@ -427,11 +416,11 @@
                         </table>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
     <!-- sec_my_contacts -->
-    <section id="contacts" class="sec sec_my_contacts">
+<!--    <section id="contacts" class="sec sec_my_contacts">
         <div class="container">
             <img alt="" class="abs_pic dubl_stone d-md-block d-none" src="img/abs_pic/dubl_stone.svg">
             <img alt="" class="abs_pic dubl_line_down" src="img/abs_pic/dubl_line.svg">
@@ -531,9 +520,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- / sec_my_contacts -->
-    <section id="my_articles" class="sec sec_my_articles">
+  <!--  <section id="my_articles" class="sec sec_my_articles">
         <div class="container">
             <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
             <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
@@ -608,9 +597,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- sec_my_articles -->
-    <section class="sec sec_latest_events">
+<!--    <section class="sec sec_latest_events">
         <div class="container">
             <div class="sec_title">
                 <img src="img/sec_latest_events/title_label.svg" alt="title_label">
@@ -635,7 +624,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- / sec_my_articles -->
     <!-- sec_success_stories -->
     <section id="reviews" class="sec sec_success_stories">
@@ -653,29 +642,35 @@
             <div class="row justify-content-between">
                 <div class="col-md-4 card_wrapp">
                     <div class="card_profile">
-                        <div class="icon" style="background-image: url('img/sec_success_stories/evgen.jpg');"></div>
-                        <h3>Евгений Маташ</h3>
-                        <p>Менеджер по работе с партнерами</p>
-                        <i>“В нашей компании проходил тренинг “Позитивного Менеджмента”. Я поставил себе две цели - которые смог достичь! Оказалось, все мои ограничения были сокрыты в моем мышлении. Я смог его изменить, и освоив новые инструменты, у
-                            меня получилось быстро вырасти!”</i>
+                        <div class="icon" style="background-image: url('img/sec_success_stories/anastasia.jpg');"></div>
+                        <h3>Анастасия Прохорова</h3>
+                        <p>Экономист, руководитель отдела</p>
+                        <i>“Курс был отличный: несмотря на то, что мое ВО по этому профилю, училась как в первый раз. Спасибо за рекомендованные книги, это самые толковые материалы, которые я видела.
+                          Алексей, большое Вам спасибо, и я очень надеюсь что смогу еще увидеть курсы которые будете вести именно Вы. У Вас талант делать ужасные и сложные вещи, простыми для понимания. ”</i>
                     </div>
                 </div>
                 <div class="col-md-4 card_wrapp">
                     <div class="card_profile">
-                        <div class="icon" style="background-image: url('img/sec_success_stories/vova.jpg');"></div>
-                        <h3>Владимир Сущенко</h3>
-                        <p>Проектный менеджер</p>
-                        <i>“Проходил обучение и продолжаю обучаться у Константина в “Акселератор Карьерного Роста: Практикум”. Методология позитивного менеджмента мне очень импонирует. Поначалу ее сложно внедрять, но спустя время, как команда
-                            привыкает к новым методикам - результаты кардинально меняются, в лучшую сторону. ”</i>
+                        <div class="icon" style="background-image: url('img/sec_success_stories/daria.jpg');"></div>
+                        <h3>Дарья Пономаренко</h3>
+                        <p>Собственник малого бизнеса</p>
+                        <i>“Дякую Вам, пане Олексію! Логічне подання матеріалу, завдання із життя, приклади із розрахунками, тести та завдання, які неформально навчають - те, що мені так не вистачало у ВНЗ, коли брала другу економічну освіту. А інвестиційні аналітичні розрахунки із висновками - це навіть більше, ніж я очікувала! Дякую за нові знання та неформальний підхід до подання матеріалу. ”</i>
                     </div>
                 </div>
                 <div class="col-md-4 card_wrapp">
                     <div class="card_profile">
-                        <div class="icon" style="background-image: url('img/sec_success_stories/vitaliy.jpg');"></div>
-                        <h3>Виталий Демьянец</h3>
-                        <p>Руководитель IT</p>
-                        <i>“Не могу сам поверить в происходящее. Всего 5 месяцев назад я только занял должность руководителя крупным IT-проектом. И вот сейчас я пишу этот отзыв на позиции Технического Директора. Программа Константина мне в этом очень
-                            помогла, и я здесь обрел не только инструментарий и развитие, но также хороших друзей и сильное окружение. ”</i>
+                        <div class="icon" style="background-image: url('img/sec_success_stories/alena.jpg');"></div>
+                        <h3>Алена Карнаух</h3>
+                        <p>Руководитель отдела</p>
+                        <i>“Лекції і завдання дуже цікаві - все це відкриває бачення нового світу, котрий перед цим здавався чудернацьким та незрозумілим. Дуже цікаво побачити скільки всього може розказати звичайна фінансова звітність! Якщо займатися фінансовим менеджментом, є можливість глибше зрозуміти процеси, котрі керують сучасним світом. ”</i>
+                    </div>
+                </div>
+                <div class="col-md-4 card_wrapp">
+                    <div class="card_profile">
+                        <div class="icon" style="background-image: url('img/sec_success_stories/oksana.jpg');"></div>
+                        <h3>Оксана Довгун</h3>
+                        <p>Предприниматель</p>
+                        <i>“Дуже дякую за курс! Пояснення та приклади дали можливість простіше сприйняти інформацію, яку раніше вивчала. Власне, формули варто розуміти та автоматизовувати розрахунки, а не лише завчати без практики.  ”</i>
                     </div>
                 </div>
             </div>
@@ -691,11 +686,11 @@
             <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
             <div class="sec_title">
                 <img src="img/sec_your_mentor/title_label.svg" alt="title_label">
-                <h2>Хочешь я стану твоим наставником в карьере и <br> бизнесе для кратного роста?</h2>
+                <h2>Хочешь взять под контроль финансовые потоки своей компании?</h2>
             </div>
             <div class="row">
                 <div class="col-md-6 img_wrapp">
-                    <img src="img/sec_your_mentor/konstantin.png" alt="konstantin">
+                    <img src="img/sec_your_mentor/gerasshenko.png" alt="gerasshenko">
                 </div>
                 <div class="col-md-6">
                     <div class="embed-responsive embed-responsive-16by9">
