new photo and fixes

--- a/index.html
+++ b/index.html
@@ -90,16 +90,16 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 d-flex justify-content-center">
                     <div class="card_transparent">
-                        <div class="icon_avatar" style="background-image: url('img/sec_bio/konstantin.jpg')"></div>
+                        <div class="icon_avatar" style="background-image: url('img/sec_bio/gerasshenko.jpg')"></div>
                         <h5>Алексей Геращенко</h5>
-                        <div class="soc_links_wrapp">
+                      <!--  <div class="soc_links_wrapp">
                             <a href="#" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
                             <a href="#" class="item"><img src="img/soc_links/vk.svg" alt="vk"></a>
                             <a href="#" class="item"><img src="img/soc_links/tw.svg" alt="tw"></a>
                             <a href="#" class="item"><img src="img/soc_links/tg.svg" alt="tg"></a>
                             <a href="#" class="item"><img src="img/soc_links/in.svg" alt="in"></a>
-                        </div>
-                        <a href="#" class="btn btn-blue">История взлетов и падений</a>
+                        </div> -->
+                    <!--    <a href="#" class="btn btn-blue">История взлетов и падений</a> -->
                     </div>
                 </div>
                 <div class="col-lg-7">
@@ -121,7 +121,7 @@
             <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
             <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
             <div class="row align-items-center justify-content-between">
-                <div class="col col-md-6 left-col">
+               <div class="col col-md-6 left-col">
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
@@ -665,14 +665,14 @@
                         <i>“Лекції і завдання дуже цікаві - все це відкриває бачення нового світу, котрий перед цим здавався чудернацьким та незрозумілим. Дуже цікаво побачити скільки всього може розказати звичайна фінансова звітність! Якщо займатися фінансовим менеджментом, є можливість глибше зрозуміти процеси, котрі керують сучасним світом. ”</i>
                     </div>
                 </div>
-                <div class="col-md-4 card_wrapp">
+            <!--    <div class="col-md-4 card_wrapp">
                     <div class="card_profile">
                         <div class="icon" style="background-image: url('img/sec_success_stories/oksana.jpg');"></div>
                         <h3>Оксана Довгун</h3>
                         <p>Предприниматель</p>
                         <i>“Дуже дякую за курс! Пояснення та приклади дали можливість простіше сприйняти інформацію, яку раніше вивчала. Власне, формули варто розуміти та автоматизовувати розрахунки, а не лише завчати без практики.  ”</i>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -702,8 +702,8 @@
         </div>
     </section>
 
-    <!-- sec_12 -->
-    <section class="sec sec_12">
+   <!-- sec_12 -->
+<!--     <section class="sec sec_12">
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
@@ -740,7 +740,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>  -->
     <!-- / sec_12 -->
     <!-- footer -->
     <footer class="sec">
