--- a/index.html
+++ b/index.html
@@ -820,14 +820,14 @@
                         <i>“Лекції і завдання дуже цікаві - все це відкриває бачення нового світу, котрий перед цим здавався чудернацьким та незрозумілим. Дуже цікаво побачити скільки всього може розказати звичайна фінансова звітність! Якщо займатися фінансовим менеджментом, є можливість глибше зрозуміти процеси, котрі керують сучасним світом. ”</i>
                     </div>
                 </div>
-                <div class="col-md-4 card_wrapp">
+            <!--    <div class="col-md-4 card_wrapp">
                     <div class="card_profile">
                         <div class="icon" style="background-image: url('img/sec_success_stories/oksana.jpg');"></div>
                         <h3>Оксана Довгун</h3>
                         <p>Предприниматель</p>
                         <i>“Дуже дякую за курс! Пояснення та приклади дали можливість простіше сприйняти інформацію, яку раніше вивчала. Власне, формули варто розуміти та автоматизовувати розрахунки, а не лише завчати без практики. ”</i>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -848,7 +848,7 @@
     <!-- / sec_are_you_ready -->
 
     <!-- sec_12 -->
-    <section id="ya_nastavnik" class="sec sec_12">
+  <!--  <section id="ya_nastavnik" class="sec sec_12">
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-md-3">
@@ -895,7 +895,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- / sec_12 -->
     <!-- footer -->
     <footer class="sec">
