--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- fixed header -->
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand" href="#"><img src="img/logo.svg" alt=""></a>
+        <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <img src="img/nav/burger.svg" alt="burger">
@@ -31,12 +31,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#my_expertize">Моя экспертность</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#contacts">Деловые контакты </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#my_articles">Мои статьи</a>
-                </li>
+              
                 <li class="nav-item">
                     <a class="nav-link" href="#reviews">Отзывы</a>
                 </li>
@@ -67,7 +62,7 @@
                             <li><img src="img/sec_1/ok.svg" alt="ok">Преподаватель авторских финансовых курсов в Киево-Могилянской бизнес-школе, бизнес-тренер и консультант</li>
                             <li><img src="img/sec_1/ok.svg" alt="ok">Популяризатор экономических знаний и экономической культуры</li>
                             <li><img src="img/sec_1/ok.svg" alt="ok">Автор 3 курсов на платформе Prometheus, на которые суммарно зарегистрировались более 80 000 человек.</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Проводил обучение специалистов для таких крупных украинских и международных компаний как SoftServe, Global Logic, Milkiland, Группа компаний Фокстрот, Efes и многих других</li>
+                  <!--          <li><img src="img/sec_1/ok.svg" alt="ok">Проводил обучение специалистов для таких крупных украинских и международных компаний как SoftServe, Global Logic, Milkiland, Группа компаний Фокстрот, Efes и многих других</li> -->
                         </ul>
                     </div>
 
@@ -149,7 +144,7 @@
             <div class="card with-date">
                 <img alt="" class="abs_pic stone" src="img/abs_pic/stone_orange.svg">
                 <div class="media align-items-center">
-                    <img class="mr-md-3 media-image" src="img/sec_my_projects/card_img1.jpg" alt="Generic placeholder image">
+                    <img class="mr-md-3 media-image" src="img/sec_my_projects/card_img1.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <div class="date_wrap">
                             <div class="item">
