--- a/index1.html
+++ b/index1.html
@@ -14,7 +14,7 @@
 <body>
 <!-- fixed header -->
 <nav class="navbar navbar-expand-md fixed-top">
-    <a class="navbar-brand" href="#"><span style="font-weight: 700;color: #4f4f4f; font-size: 22px;">GET SKILLS</span></a>
+    <a class="navbar-brand" href="#"><img alt=""  src="img/logo.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
             aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
@@ -33,9 +33,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="#my_expertize">Моя экспертность</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#contacts">Деловые контакты </a>
-            </li>
+
             <li class="nav-item">
                 <a class="nav-link" href="#my_articles">Мои статьи</a>
             </li>
@@ -83,18 +81,14 @@
                         <li><img src="img/sec_1/ok.svg" alt="ok">Более 12 лет тренерской бизнес практики в крупных
                             национальных компаниях Украины.
                         </li>
-                        <li><img src="img/sec_1/ok.svg" alt="ok">С 2002-2012 года со-организатор и тренер Всеукраинских
-                            лагерей личностного роста «ПСИЗОН».
-                        </li>
-                        <li><img src="img/sec_1/ok.svg" alt="ok">Спикер и тренер проектов инновационного образования
-                            Киевского Университета «КРОК».
+
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="img_wrapp">
-                    <img src="img/sec_1/konstantin.png" alt="SE" style="opacity: .9;">
+                    <img src="img/sec_1/dubravin.png" alt="SE" style="opacity: .9;">
                 </div>
             </div>
         </div>
@@ -110,15 +104,9 @@
         <div class="row align-items-center">
             <div class="col-lg-5 d-flex justify-content-center">
                 <div class="card_transparent">
-                    <div class="icon_avatar" style="background-image: url('img/sec_bio/konstantin.jpg')"></div>
+                    <div class="icon_avatar" style="background-image: url('img/sec_bio/dubravin.jpg')"></div>
                     <h5>Дэн Дубравин</h5>
-                    <div class="soc_links_wrapp">
-                        <a href="https://www.facebook.com/yomtov.shufotinski/" class="item"><img
-                                src="img/soc_links/fb.svg" alt="fb"></a>
-                        <a href="https://t.me/YomtovShufotinski" class="item"><img src="img/soc_links/tg.svg" alt="tg"></a>
-                        <a href="https://www.instagram.com/yomtov.shufotinski/" class="item"><img
-                                src="img/soc_links/in.svg" alt="in"></a>
-                    </div>
+
                 </div>
             </div>
             <div class="col-lg-7">
@@ -180,7 +168,7 @@
             <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
             <div class="media align-items-center">
                 <div class="media-image-abs_wrapp">
-                    <img class="mr-md-3 media-image media-image-abs" src="img/sec_my_projects/card_img2.jpg"
+                    <img class="mr-md-3 media-image media-image-abs" src="img/sec_my_projects/card_img2.png"
                          alt="Generic placeholder image">
                 </div>
                 <div class="media-body">
@@ -206,105 +194,10 @@
                 </div>
             </div>
         </div>
-        <div class="card card-with-table">
-            <img alt="" class="abs_pic stone2" src="img/abs_pic/stone.svg">
-            <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
-            <img alt="" class="abs_pic circle2" src="img/abs_pic/circle.svg">
-            <div class="media align-items-center">
-                <div class="border-image" style="background-image: url('img/sec_bio/konstantin.jpg');">
-                </div>
-                <div class="text">
-                    <p class="text-title">Задай вопрос и я тебе обязательно отвечу</p>
-                    <p>Мне важно помогать тебе в решении твоих задач и достижении поставленных целей. Я поделюсь своим
-                        опытом, знаниями и экспертностью. </p>
-                </div>
-            </div>
-            <div class="table_wrapp">
-                <div class="table-responsive">
-                    <table class="table">
-                        <thead>
-                        <tr>
-                            <th scope="col">№</th>
-                            <th scope="col">Экспертность</th>
-                            <th scope="col">Ответы на <br> вопросы</th>
-                            <th scope="col">Экспертные <br> статьи</th>
-                            <th scope="col">Положительные <br> отзывы</th>
-                            <th scope="col"></th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td class="expertise">Личные финансы</td>
-                            <td>101</td>
-                            <td>3</td>
-                            <td>6</td>
-                            <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td class="expertise">Семейный бюджет</td>
-                            <td>98</td>
-                            <td>6</td>
-                            <td>9</td>
-                            <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td class="expertise">Достижение целей</td>
-                            <td>11</td>
-                            <td>3</td>
-                            <td>4</td>
-                            <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">4</th>
-                            <td class="expertise">Личная эффективность</td>
-                            <td>76</td>
-                            <td>1</td>
-                            <td>11</td>
-                            <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">5</th>
-                            <td class="expertise">Тунели продаж</td>
-                            <td>4</td>
-                            <td>0</td>
-                            <td>20</td>
-                            <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">5</th>
-                            <td class="expertise">Чат-бот мастер</td>
-                            <td>8</td>
-                            <td>3</td>
-                            <td>23</td>
-                            <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">5</th>
-                            <td class="expertise">Духовный рост</td>
-                            <td>6</td>
-                            <td>9</td>
-                            <td>13</td>
-                            <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">5</th>
-                            <td class="expertise">Личностный рост</td>
-                            <td>6</td>
-                            <td>19</td>
-                            <td>3</td>
-                            <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
+
     </div>
 </section>
-<!-- sec_my_contacts -->
+<!-- sec_my_contacts --> <!--
 <section id="contacts" class="sec sec_my_contacts">
     <div class="container">
         <img alt="" class="abs_pic dubl_stone d-md-block d-none" src="img/abs_pic/dubl_stone.svg">
@@ -381,7 +274,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 <!-- / sec_my_contacts -->
 <section id="my_articles" class="sec sec_my_articles">
     <div class="container">
@@ -574,7 +467,7 @@
         </div>
         <div class="row">
             <div class="col-md-6 img_wrapp">
-                <img src="img/sec_1/konstantin.png" alt="konstantin">
+                <img src="img/sec_your_mentor/dubravin.png" alt="dubravin">
             </div>
             <div class="col-md-6">
                 <div class="embed-responsive embed-responsive-16by9">
@@ -588,7 +481,7 @@
     </div>
 </section>
 
-<!-- sec_12 -->
+<!-- sec_12 --> <!--
 <section class="sec sec_12">
     <div class="container">
         <div class="row">
@@ -626,7 +519,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 <!-- / sec_12 -->
 <!-- footer -->
 <footer class="sec">
